[Minor] Avoid overflow on the round icons

--- a/public/resources/css/gamelayout.css
+++ b/public/resources/css/gamelayout.css
@@ -1141,7 +1141,7 @@ a.localize .material-icons {
     align-items:center;
     font-size:1.6em;
     background:darkred;
-    border:2px outset red;
+    border:2px outset lightgrey;
     border-radius:1em;
     box-shadow:4px 4px 20px grey; /*12px 12px 12px black;*/
     opacity:0.9;
